# golems

./: CMakeLists.txt
brake_stuff/ipa_canopen_core/: CMakeLists.txt  CMakeLists.txt.old
brake_stuff/ipa_canopen_core/src/: ipa_canopen_core.cpp  ipa_canopen_core_backup.cpp
brake_stuff/ipa_canopen_core/tools/: ROS_interface.cpp  get_pos.cpp  homing.cpp  move_device.cpp  move_to_pos.cpp  release_brakes.cpp
communication/: CMakeLists.txt  README.md
communication/client_pap/: CMakeLists.txt
communication/client_pap/include/: client_pap.h
communication/client_pap/ui/: client_pap.ui
communication/client_pick/: CMakeLists.txt
communication/client_pick/include/: client_pick.h  client_unit.h  connectDialog.h  fsm_header.h  selectObjectDialog.h
communication/client_pick/src/: client_pick.cpp  client_unit.cpp  connectDialog.cpp  main.cpp  selectObjectDialog.cpp
communication/client_pick/ui/: client_pick.ui  connectDialog.ui  selectObjectDialog.ui
communication/msgs/: CMakeLists.txt  enum_names.h  server_msgs.cpp  server_msgs.h
communication/server_pick/: CMakeLists.txt
communication/server_pick/include/: fsm_header.h  fsm_msg.h  server_pick.h  server_unit.h
communication/server_pick/src/: main.cpp  server_pick.cpp  server_unit.cpp
communication/server_pick/ui/: server_pick.ui
communication/test1_server/: CMakeLists.txt
communication/test1_server/include/: server_unit.h  (+1 more)
communication/test2_server/: CMakeLists.txt
crichton/basicControl/: CMakeLists.txt  basicControl.cpp  basicControl.h  bimanualControl.cpp  bimanualControl.h  unimanualControl.cpp  unimanualControl.h
crichton/executables/: CMakeLists.txt  crichton_trajGen.cpp
crichton/motion_control/: Arm_Interface.h  CMakeLists.txt  Control_Interface.h  DualLimb_Interface.cpp  DualLimb_Interface.h  Limb_Interface.cpp  Limb_Interface.h  base_control.cpp  base_control.h  base_control_client.cpp  base_control_server.cpp  base_dual_control.cpp  base_dual_control.h  gatekeeper.cpp  gatekeeper_bimanual.cpp
crichton/tests/: CMakeLists.txt  ach_receive.cpp  ach_send.cpp  basicControl_right.cpp  basicControl_test1.cpp  basicControl_test2.cpp  joint_vel_test1.cpp  joint_vel_test2.cpp  monotonic.cpp  moveArmBasic.cpp  moveFingers.cpp  moveLeftArm.cpp  moveLeftArm_loop.cpp  moveLeftJoint.cpp  readArmStates.cpp  readHandStates.cpp  read_leftArm_state.cpp  read_rightArm_state.cpp  testTimestamp.cpp  test_baseControl.cpp  test_motionControl.cpp  traj_test1.cpp  traj_test_receiver.cpp
global/: CMakeLists.txt  channel_names.h  crichton_global.cpp  crichton_global.h  fsa_data.h  robot_global.h
jsoncpp/: CMakeLists.txt  jsoncpp.cpp
jsoncpp/json/: json.h
motion_control/: Arm_Interface.cpp  Arm_Interface.h  CMakeLists.txt  Control_Interface.cpp  Control_Interface.h  DualLimb_Interface.cpp  DualLimb_Interface.h  Hand_Interface.cpp  Hand_Interface.h  Limb_Interface.cpp  Limb_Interface.h  base_control.cpp  base_control.h  base_control_client.cpp  base_control_server.cpp  base_dual_control.cpp  base_dual_control.h  gatekeeper.cpp  gatekeeper_alita.cpp  gatekeeper_alita_crippled.cpp  gatekeeper_bimanual.cpp  gatekeeper_crippled.cpp
motion_control/msgs/: CMakeLists.txt  bimanual_msgs.cpp  control_msgs.h
motion_control/trajectories/: CMakeLists.txt
object_recognition/: CMakeLists.txt  ObjectsDatabase.cpp  ObjectsDatabase.h  base_classifier.cpp  base_classifier.h
perception/: CMakeLists.txt  README.md  eye_v0.cpp  eye_v1.cpp  getSegmentedClouds.cpp  object_in_box.cpp  segmentedCloudTestReceiver.cpp
perception/calibration/: CMakeLists.txt  calibration_utils.cpp  calibration_utils.h
perception/executables/: CMakeLists.txt  grab_data.cpp  send_data.cpp
perception/ftts/: CMakeLists.txt  fast_tabletop_segmentation.cpp  fast_tabletop_segmentation.h
perception/getKinectTran/: CMakeLists.txt  calibEq.m  func_Eq.txt  getKinectTran.cpp  levmar_eqs.cpp  levmar_eqs.h  moveEE_automatic.cpp  moveEE_predef.cpp  pickObject.cpp  testMethods.cpp
perception/marker_detection/: CMakeLists.txt  crichton_markerDetector.cpp  crichton_markerDetector.h  marker_detection.cpp
perception/msgs/: CMakeLists.txt  perception_msgs.cpp  perception_msgs.h
perception/obj_recog/: CMakeLists.txt  capture_tool.cpp  feature_estimation.cpp  feature_estimation.h  filters.cpp  filters.h  load_clouds.cpp  load_clouds.h  object_recognition.cpp  object_recognition.h  openni2_capture.cpp  openni2_capture.h  registration.cpp  registration.h  segmentation.cpp  segmentation.h  typedefs.h
perception/pointcloud_tools/: CMakeLists.txt
perception/scripts/: get_graphs.txt  plot_closed.sh  plot_output.txt  plot_sq_function_vars.sh  send_data.sh
perception/skeleton_tracker/: CMakeLists.txt  skeleton_tracker.cpp  skeleton_tracker.h
perception/tabletop_segmentation/: CMakeLists.txt  tabletop_segmentation.h
projects/basic_calibration_umeyama/: CMakeLists.txt  testingGrip.cpp
projects/calibration_v0/: CMakeLists.txt  calibration_v0.cpp  calibration_v1_alita.cpp  calibration_v1_crichton.cpp  calibration_v2_alita.cpp  getMarkersRobotPose.cpp  test_alvar3Daccuracy.cpp
projects/marker_detection/: CMakeLists.txt  marker_detection.cpp  marker_detection_direct.cpp  marker_sendPose.cpp
projects/obj_recog/: CMakeLists.txt  GlobalRecognizer.cpp  GlobalRecognizer.h  LocalRecognizer.cpp  LocalRecognizer.h  global_recognition.cpp  local_recognition.cpp  models_input.json
projects/object_recognition/: CMakeLists.txt  classifier.cpp  classifier.h  feature_extractor.cpp  feature_extractor.h  features_0.cpp  get_images_mean.cpp  recognition_0.cpp  recognition_1.cpp  recognition_2_speech.cpp  recognition_3_speech_joystick.cpp  recognition_4_comparison.cpp  see_images_preprocessed_db.cpp  store_features.cpp  store_images_preprocessed.cpp  train_svm.cpp
theremin/: CMakeLists.txt  CMakeLists.txt~  theremin.pro
theremin/app/: app.pro
theremin/include/: theremin.h
theremin/src/: test.cpp  testunits.cpp  testunits.cpp~  theremin.cpp  theremin.cpp~  wf.cpp~
theremin/tinyalsa/: pcm.c  tinyalsa.pro  tinyplay.c
theremin/ui/: theremin.ui  theremin.ui~
(+315 files in other folders)
